# xrdhttp-pelican

./: CMakeLists.txt  README.md  pelican-api.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
rpm/: xrdhttp-pelican.spec
src/: Prestage.cc  SignalHandlers.cc  SignalHandlers.hh  XrdHttpPelican.cc  XrdHttpPelican.hh
tests/: CMakeLists.txt  xrdhttp-setup.sh  xrdhttp-teardown.sh  xrdhttp-test.sh  xrdhttp_pelican_test.cc  xrdhttp_reexec_test.cc  xrdhttp_stacktrace_integration_test.cc  xrdhttp_stacktrace_unit_test.cc  xrdoss_slowopen.cc  xrdscitokens-create-jwks.cc  xrdscitokens-create-token.cc
